# smol-py

./: .gitignore  Makefile  README.md  oldpyproject.toml  poetrypyproject.toml  pyproject.toml  setup.py
report-env/: main.py
src/report-env/: main.py
