[project]
name = "report-env"
version = "0.0.4"
authors = [
  { name="swyx", email="swyx@dontemailme.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[console_scripts]
report-env = "report_env.__main__:main"

[project.urls]
"Homepage" = "https://github.com/sw-yx/report-env"
"Bug Tracker" = "https://github.com/sw-yx/report-env/issues"