[tool.poetry]
name = "report-env"
version = "0.05"
description = "pythong version of npx envinfo"
authors = ["swyx <swyx@dontemail.me>"]
license = "MIT"
readme = "README.md"
packages = [{include = "report-env"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
report-env = "src.report_env.__main__:main"

[project.urls]
"Homepage" = "https://github.com/sw-yx/report-env"
"Bug Tracker" = "https://github.com/sw-yx/report-env/issues"